--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         </div>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="js/mask.js"></script>
         <script>
             //ПЛАВНЫЙ ЯКОРЬ 
